<resources>
    <string name="app_name">chapter5challenge</string>
    <string name="lang_first_option">INA</string>
    <string name="lang_second_option">ENG</string>
    <string name="login_header">Masuk untuk Melanjutkan</string>
    <string name="register_header">Buat Akun Baru</string>
    <string name="username_field">Masukkan Username</string>
    <string name="email_field">Masukkan Email</string>
    <string name="password_field">Masukkan Sandi</string>
    <string name="confirm_field">Konfirmasi Sandi</string>
    <string name="register_ask">Belum Punya Akun ?</string>
    <string name="register_here">Daftar Disini</string>
    <string name="login_ask">Sudah Punya Akun ?</string>
    <string name="login_here">Masuk Disini</string>
    <string name="button_login">MASUK</string>
    <string name="button_register">DAFTAR</string>
    <string name="button_logout">KELUAR</string>
    <string name="button_back">KEMBALI</string>
    <string name="button_create">BUAT</string>
    <string name="button_update">UBAH</string>
    <string name="button_delete">HAPUS</string>
    <string name="example_desc">Royal Canin Fit adalah makanan untuk kucing yang aktif di luar ruangan. Kucing yang aktif di luar ruangan memiliki akses terbuka untuk bertemu dengan hewan lain, seperti parasit yang mengganggu sistem kekebalan tubuhnya.</string>
</resources>